// NOTE: Run the following command when you modify this file.
// /usr/local/bin/protoc --go_out=plugins=grpc:. *.proto
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.bitbucket.hnakamur.rdirsync.rpc";
option java_outer_classname = "RDirSyncProto";

package rpc;

service RDirSync {
  rpc FetchFile(FetchFileRequest) returns (stream FileChunk) {}
  rpc ReadDir(ReadDirRequest) returns (stream FileInfos) {}

  rpc EnsureDirExists(EnsureDirExistsRequest) returns (Empty) {}
  rpc EnsureNotExist(EnsureNotExistRequest) returns (Empty) {}
  rpc SendFile(stream SendFileRequest) returns (Empty) {}
}

message FetchFileRequest {
  string path = 1;
  int32 bufSize = 2;
}

message FileChunk {
  bytes chunk = 1;
}

message ReadDirRequest {
  string path = 1;
  int32 atMostCount = 2;
}

message FileInfos {
  repeated FileInfo infos = 1;
}

message FileInfo {
  string name = 1;
  int64 size = 2;
  int32 mode = 3;
  int64 modTime = 4;
}

message EnsureNotExistRequest {
  string path = 1;
}

message Empty {}

message EnsureDirExistsRequest {
  string path = 1;
}

message SendFileRequest {
  string path = 1;
  bytes chunk = 2;
}

